bug 232969 : use 'native' encoding when setting/getting registry on Windows (r=cbie, sr=bryner)